fixing about alignment

--- a/assets/about.css
+++ b/assets/about.css
@@ -45,9 +45,10 @@ body{
 }
 
 #nav {
-	width:200px;
+	width:182.5px;
 	float: left;
 	clear: both;
+	padding-left: 17.5px;
 }
 #main {
 	width:400px;
